Додає адптивну верстку до футера

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             <use href="./images/icons.svg#menu-btn"></use>
           </svg>
         </button>
+
         <div class="menu-container js-menu-container" id="mobile-menu">
-          <button class="menu-btn--close js-close-menu" type="button">
+          <button class="menu-btn menu-btn--close js-close-menu" type="button">
             <svg
               class="menu-btn__icon"
               aria-label="Кнопка закриття мобыльного меню"
@@ -604,7 +605,7 @@
           <h2 class="section__title">Постійні клієнти</h2>
 
           <ul class="clients-list">
-            <li>
+            <li class="clients-list__item">
               <a class="clients-list__link" href="" aria-label="YA & GO">
                 <span class="visually-hidden">YA & GO</span>
                 <svg class="clients-list__icon" width="106" height="60">
@@ -612,7 +613,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-list__item">
               <a
                 class="clients-list__link"
                 href=""
@@ -624,7 +625,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-list__item">
               <a class="clients-list__link" href="" aria-label="Company">
                 <span class="visually-hidden">Company</span>
                 <svg class="clients-list__icon" width="106" height="60">
@@ -632,7 +633,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-list__item">
               <a class="clients-list__link" href="" aria-label="Foster Peters">
                 <span class="visually-hidden">Foster Peters</span>
                 <svg class="clients-list__icon" width="106" height="60">
@@ -640,7 +641,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-list__item">
               <a class="clients-list__link" href="" aria-label="Brand">
                 <span class="visually-hidden">Brand</span>
                 <svg class="clients-list__icon" width="106" height="60">
@@ -648,7 +649,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-list__item">
               <a
                 class="clients-list__link"
                 href=""
@@ -753,7 +754,7 @@
         </div>
 
         <div class="page-footer__form-container">
-          <p class="page-footer__call-to-action">Підпишіться на розсилку</p>
+          <p class="social__title">Підпишіться на розсилку</p>
 
           <form class="footer-form" autocomplete="off">
             <label class="footer-form__label">
