--- a/portfolio.html
+++ b/portfolio.html
@@ -53,14 +53,14 @@
           <nav class="site-nav">
             <ul class="site-nav__list">
               <li class="site-nav__item">
-                <a
-                  href="./index.html"
-                  class="site-nav__link site-nav__link--current"
-                  >Студія</a
-                >
+                <a href="./index.html" class="site-nav__link">Студія</a>
               </li>
               <li class="site-nav__item">
-                <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
+                <a
+                  href="./portfolio.html"
+                  class="site-nav__link site-nav__link--current"
+                  >Портфоліо</a
+                >
               </li>
               <li class="site-nav__item">
                 <a href="" class="site-nav__link">Контакти</a>
@@ -743,10 +743,10 @@
     </footer>
 
     <script>
-      const { height: headerHeight } = document
-        .querySelector(".page-header")
-        .getBoundingClientRect();
-      document.body.style.paddingTop = `${headerHeight}px`;
+      // const { height: headerHeight } = document
+      //   .querySelector(".page-header")
+      //   .getBoundingClientRect();
+      // document.body.style.paddingTop = `${headerHeight}px`;
     </script>
   </body>
 </html>
