Додає підключення скрипта меню на сторінці портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -741,7 +741,7 @@
         </div>
       </div>
     </footer>
-
+    <script src="./js/menu.js"></script>
     <script>
       // const { height: headerHeight } = document
       //   .querySelector(".page-header")
