--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                 <img
                   class="work-list__image"
                   srcset="
-                    ../images/desktop-image/box-1.jpg    1x,
-                    ../images/desktop-image/box-1@2x.jpg 2x
+                    ./images/desktop-image/box-1.jpg    1x,
+                    ./images/desktop-image/box-1@2x.jpg 2x
                   "
                   src="./images/desktop-image/box-1.jpg"
                   alt=""
@@ -218,8 +218,8 @@
                 <img
                   class="work-list__image"
                   srcset="
-                    ../images/desktop-image/box-2.jpg    1x,
-                    ../images/desktop-image/box-2@2x.jpg 2x
+                    ./images/desktop-image/box-2.jpg    1x,
+                    ./images/desktop-image/box-2@2x.jpg 2x
                   "
                   src="./images/desktop-image/box-2.jpg"
                   alt=""
@@ -231,8 +231,8 @@
               <img
                 class="work-list__image"
                 srcset="
-                  ../images/desktop-image/box-3.jpg    1x,
-                  ../images/desktop-image/box-3@2x.jpg 2x
+                  ./images/desktop-image/box-3.jpg    1x,
+                  ./images/desktop-image/box-3@2x.jpg 2x
                 "
                 src="./images/desktop-image/box-3.jpg"
                 alt=""
