--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </svg>
               </div>
               <h3 class="benefits-list__title">Пунктуальність</h3>
-              <p class="benefits-list_._description">
+              <p class="benefits-list__description">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
@@ -252,24 +252,24 @@
               <picture>
                 <source
                   srcset="
-                    ../images/mobile-image/mobile-person-1.jpg    1x,
-                    ../images/mobile-image/mobile-person-1@2x.jpg 2x
+                    ./images/mobile-image/mobile-person-1.jpg    1x,
+                    ./images/mobile-image/mobile-person-1@2x.jpg 2x
                   "
                   media="(max-width: 767px)"
                   type="image/jpeg"
                 />
                 <source
                   srcset="
-                    ../images/tablet-image/tablet-person-4.jpg    1x,
-                    ../images/tablet-image/tablet-person-4@2x.jpg 2x
+                    ./images/tablet-image/tablet-person-4.jpg    1x,
+                    ./images/tablet-image/tablet-person-4@2x.jpg 2x
                   "
                   media="(max-width: 1199px)"
                   type="image/jpeg"
                 />
                 <source
                   srcset="
-                    ../images/desktop-image/desktop-person-4.jpg    1x,
-                    ../images/desktop-image/desktop-person-4@2x.jpg 2x
+                    ./images/desktop-image/desktop-person-4.jpg    1x,
+                    ./images/desktop-image/desktop-person-4@2x.jpg 2x
                   "
                   type="image/jpeg"
                 />
@@ -339,24 +339,24 @@
               <picture>
                 <source
                   srcset="
-                    ../images/mobile-image/mobile-person-2.jpg    1x,
-                    ../images/mobile-image/mobile-person-2@2x.jpg 2x
+                    ./images/mobile-image/mobile-person-2.jpg    1x,
+                    ./images/mobile-image/mobile-person-2@2x.jpg 2x
                   "
                   media="(max-width: 767px)"
                   type="image/jpeg"
                 />
                 <source
                   srcset="
-                    ../images/tablet-image/tablet-person-1.jpg    1x,
-                    ../images/tablet-image/tablet-person-1@2x.jpg 2x
+                    ./images/tablet-image/tablet-person-1.jpg    1x,
+                    ./images/tablet-image/tablet-person-1@2x.jpg 2x
                   "
                   media="(max-width: 1199px)"
                   type="image/jpeg"
                 />
                 <source
                   srcset="
-                    ../images/desktop-image/desktop-person-1.jpg    1x,
-                    ../images/desktop-image/desktop-person-1@2x.jpg 2x
+                    ./images/desktop-image/desktop-person-1.jpg    1x,
+                    ./images/desktop-image/desktop-person-1@2x.jpg 2x
                   "
                   type="image/jpeg"
                 />
@@ -426,24 +426,24 @@
               <picture>
                 <source
                   srcset="
-                    ../images/mobile-image/mobile-person-3.jpg    1x,
-                    ../images/mobile-image/mobile-person-3@2x.jpg 2x
+                    ./images/mobile-image/mobile-person-3.jpg    1x,
+                    ./images/mobile-image/mobile-person-3@2x.jpg 2x
                   "
                   media="(max-width: 767px)"
                   type="image/jpeg"
                 />
                 <source
                   srcset="
-                    ../images/tablet-image/tablet-person-2.jpg    1x,
-                    ../images/tablet-image/tablet-person-2@2x.jpg 2x
+                    ./images/tablet-image/tablet-person-2.jpg    1x,
+                    ./images/tablet-image/tablet-person-2@2x.jpg 2x
                   "
                   media="(max-width: 1199px)"
                   type="image/jpeg"
                 />
                 <source
                   srcset="
-                    ../images/desktop-image/desktop-person-2.jpg    1x,
-                    ../images/desktop-image/desktop-person-2@2x.jpg 2x
+                    ./images/desktop-image/desktop-person-2.jpg    1x,
+                    ./images/desktop-image/desktop-person-2@2x.jpg 2x
                   "
                   type="image/jpeg"
                 />
@@ -513,24 +513,24 @@
               <picture>
                 <source
                   srcset="
-                    ../images/mobile-image/mobile-person-4.jpg    1x,
-                    ../images/mobile-image/mobile-person-4@2x.jpg 2x
+                    ./images/mobile-image/mobile-person-4.jpg    1x,
+                    ./images/mobile-image/mobile-person-4@2x.jpg 2x
                   "
                   media="(max-width: 767px)"
                   type="image/jpeg"
                 />
                 <source
                   srcset="
-                    ../images/tablet-image/tablet-person-3.jpg    1x,
-                    ../images/tablet-image/tablet-person-3@2x.jpg 2x
+                    ./images/tablet-image/tablet-person-3.jpg    1x,
+                    ./images/tablet-image/tablet-person-3@2x.jpg 2x
                   "
                   media="(max-width: 1199px)"
                   type="image/jpeg"
                 />
                 <source
                   srcset="
-                    ../images/desktop-image/desktop-person-3.jpg    1x,
-                    ../images/desktop-image/desktop-person-3@2x.jpg 2x
+                    ./images/desktop-image/desktop-person-3.jpg    1x,
+                    ./images/desktop-image/desktop-person-3@2x.jpg 2x
                   "
                   type="image/jpeg"
                 />
