--- a/portfolio.html
+++ b/portfolio.html
@@ -161,8 +161,8 @@
                   <picture>
                     <source
                       srcset="
-                        ../images/mobile-image/mobile-project-1.jpg    1x,
-                        ../images/mobile-image/mobile-project-1@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-1.jpg    1x,
+                        ./images/mobile-image/mobile-project-1@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -170,8 +170,8 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-1.jpg    1x,
-                        ../images/tablet-image/tablet-project-1@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-1.jpg    1x,
+                        ./images/tablet-image/tablet-project-1@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
@@ -179,8 +179,8 @@
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-1.jpg    1x,
-                        ../images/desktop-image/desktop-project-1@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-1.jpg    1x,
+                        ./images/desktop-image/desktop-project-1@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -213,8 +213,8 @@
                   <picture>
                     <source
                       srcset="
-                        ../images/mobile-image/mobile-project-2.jpg    1x,
-                        ../images/mobile-image/mobile-project-2@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-2.jpg    1x,
+                        ./images/mobile-image/mobile-project-2@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -222,8 +222,8 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-2.jpg    1x,
-                        ../images/tablet-image/tablet-project-2@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-2.jpg    1x,
+                        ./images/tablet-image/tablet-project-2@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
@@ -231,8 +231,8 @@
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-2.jpg    1x,
-                        ../images/desktop-image/desktop-project-2@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-2.jpg    1x,
+                        ./images/desktop-image/desktop-project-2@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -267,8 +267,8 @@
                   <picture>
                     <source
                       srcset="
-                        ../images/mobile-image/mobile-project-3.jpg    1x,
-                        ../images/mobile-image/mobile-project-3@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-3.jpg    1x,
+                        ./images/mobile-image/mobile-project-3@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -276,8 +276,8 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-3.jpg    1x,
-                        ../images/tablet-image/tablet-project-3@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-3.jpg    1x,
+                        ./images/tablet-image/tablet-project-3@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
@@ -285,8 +285,8 @@
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-3.jpg    1x,
-                        ../images/desktop-image/desktop-project-3@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-3.jpg    1x,
+                        ./images/desktop-image/desktop-project-3@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -319,8 +319,8 @@
                   <picture>
                     <source
                       srcset="
-                        ../images/mobile-image/mobile-project-4.jpg    1x,
-                        ../images/mobile-image/mobile-project-4@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-4.jpg    1x,
+                        ./images/mobile-image/mobile-project-4@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -328,8 +328,8 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-4.jpg    1x,
-                        ../images/tablet-image/tablet-project-4@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-4.jpg    1x,
+                        ./images/tablet-image/tablet-project-4@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
@@ -337,8 +337,8 @@
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-4.jpg    1x,
-                        ../images/desktop-image/desktop-project-4@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-4.jpg    1x,
+                        ./images/desktop-image/desktop-project-4@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -371,8 +371,8 @@
                   <picture>
                     <source
                       srcset="
-                        ../images/mobile-image/mobile-project-5.jpg    1x,
-                        ../images/mobile-image/mobile-project-5@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-5.jpg    1x,
+                        ./images/mobile-image/mobile-project-5@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -380,8 +380,8 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-5.jpg    1x,
-                        ../images/tablet-image/tablet-project-5@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-5.jpg    1x,
+                        ./images/tablet-image/tablet-project-5@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
@@ -389,8 +389,8 @@
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-5.jpg    1x,
-                        ../images/desktop-image/desktop-project-5@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-5.jpg    1x,
+                        ./images/desktop-image/desktop-project-5@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -423,8 +423,8 @@
                   <picture>
                     <source
                       srcset="
-                        ../images/mobile-image/mobile-project-6.jpg    1x,
-                        ../images/mobile-image/mobile-project-6@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-6.jpg    1x,
+                        ./images/mobile-image/mobile-project-6@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -432,18 +432,17 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-6.jpg    1x,
-                        ../images/tablet-image/tablet-project-6@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-6.jpg    1x,
+                        ./images/tablet-image/tablet-project-6@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
-                      .
                     />
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-6.jpg    1x,
-                        ../images/desktop-image/desktop-project-6@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-6.jpg    1x,
+                        ./images/desktop-image/desktop-project-6@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -476,10 +475,10 @@
               <a class="projects-list__link" href="#">
                 <div class="project-thumb">
                   <picture>
-                    <source.
+                    <source
                       srcset="
-                        ../images/mobile-image/mobile-project-7.jpg    1x,
-                        ../images/mobile-image/mobile-project-7@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-7.jpg    1x,
+                        ./images/mobile-image/mobile-project-7@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -487,8 +486,8 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-7.jpg    1x,
-                        ../images/tablet-image/tablet-project-7@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-7.jpg    1x,
+                        ./images/tablet-image/tablet-project-7@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
@@ -496,8 +495,8 @@
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-7.jpg    1x,
-                        ../images/desktop-image/desktop-project-7@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-7.jpg    1x,
+                        ./images/desktop-image/desktop-project-7@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -530,8 +529,8 @@
                   <picture>
                     <source
                       srcset="
-                        ../images/mobile-image/mobile-project-8.jpg    1x,
-                        ../images/mobile-image/mobile-project-8@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-8.jpg    1x,
+                        ./images/mobile-image/mobile-project-8@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -539,8 +538,8 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-8.jpg    1x,
-                        ../images/tablet-image/tablet-project-8@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-8.jpg    1x,
+                        ./images/tablet-image/tablet-project-8@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
@@ -548,8 +547,8 @@
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-8.jpg    1x,
-                        ../images/desktop-image/desktop-project-8@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-8.jpg    1x,
+                        ./images/desktop-image/desktop-project-8@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -582,8 +581,8 @@
                   <picture>
                     <source
                       srcset="
-                        ../images/mobile-image/mobile-project-9.jpg    1x,
-                        ../images/mobile-image/mobile-project-9@2x.jpg 2x
+                        ./images/mobile-image/mobile-project-9.jpg    1x,
+                        ./images/mobile-image/mobile-project-9@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                       type="image/jpeg"
@@ -591,8 +590,8 @@
 
                     <source
                       srcset="
-                        ../images/tablet-image/tablet-project-9.jpg    1x,
-                        ../images/tablet-image/tablet-project-9@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-9.jpg    1x,
+                        ./images/tablet-image/tablet-project-9@2x.jpg 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
@@ -600,8 +599,8 @@
 
                     <source
                       srcset="
-                        ../images/desktop-image/desktop-project-9.jpg    1x,
-                        ../images/desktop-image/desktop-project-9@2x.jpg 2x
+                        ./images/desktop-image/desktop-project-9.jpg    1x,
+                        ./images/desktop-image/desktop-project-9@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
