Видаляє скрипт фіксованого хедера

--- a/portfolio.html
+++ b/portfolio.html
@@ -742,11 +742,11 @@
       </div>
     </footer>
     <script src="./js/menu.js"></script>
-    <script>
+    <!-- <script>
       // const { height: headerHeight } = document
       //   .querySelector(".page-header")
       //   .getBoundingClientRect();
       // document.body.style.paddingTop = `${headerHeight}px`;
-    </script>
+    </script> -->
   </body>
 </html>
