--- a/index.html
+++ b/index.html
@@ -850,11 +850,11 @@
 
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
-    <script>
+    <!-- <script>
       const { height: headerHeight } = document
         .querySelector(".page-header")
         .getBoundingClientRect();
       document.body.style.paddingTop = `${headerHeight}px`;
-    </script>
+    </script> -->
   </body>
 </html>
