--- a/portfolio.html
+++ b/portfolio.html
@@ -380,8 +380,8 @@
 
                     <source
                       srcset="
-                        ./images/tablet-image/tablet-project-5.jpg    1x,
-                        ./images/tablet-image/tablet-project-5@2x.jpg 2x
+                        ./images/tablet-image/tablet-project-5.png    1x,
+                        ./images/tablet-image/tablet-project-5@2x.png 2x
                       "
                       media="(max-width: 1199px)"
                       type="image/jpeg"
